# esp-reaper-status-bar

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
embedded-wrap-err/: Cargo.toml
embedded-wrap-err/src/: lib.rs
reaper/: Cargo.toml
reaper/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
src/: main.rs  reaper_diagnostic_fetch.rs  status_bar_display.rs
