# WORKSPACE
[workspace]
members = ["embedded-wrap-err", "reaper", "renderer"]
exclude = ["renderer-tester"]
resolver = "2"

[workspace.dependencies]
# drawing
hub75-pio = { git = "https://github.com/kjagiello/hub75-pio-rs", rev = "262bca7", version = "0.1.0" }


# embassy
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-embedded-hal", features = [
  "defmt",
] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-sync", features = [
  "defmt",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-executor", features = [
  # "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
  "nightly",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-time", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-rp", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-usb", features = [
  "defmt",
] }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-net", features = [
  "defmt",
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  "dns",
] }
embassy-net-wiznet = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-net-wiznet", features = [
  "defmt",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-futures" }
embassy-usb-logger = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "embassy-usb-logger" }
cyw43 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "cyw43", features = [
  "defmt",
  "firmware-logs",
] }
cyw43-pio = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "263d1b0", package = "cyw43-pio", features = [
  "defmt",
  "overclock",
] }


embedded-wrap-err.path = "embedded-wrap-err"
reaper.path = "reaper"
renderer.path = "renderer"

smoltcp = { version = "0.10.0", default-features = false, features = [
  "proto-igmp",
  "proto-ipv4",
  "socket-tcp",
  "socket-icmp",
  "socket-udp",
  "medium-ethernet",
  "proto-dhcpv4",
  "socket-raw",
  "socket-dhcpv4",
] }
embedded-svc = { version = "0.27", default-features = false, features = [] }
embedded-io = "0.6.1"
snafu = { version = "0.8.0", default-features = false, features = [
  "rust_1_61",
  "rust_1_65",
] }
static_cell = { version = "2" }
reqwless = "0.11.0"
tap = "1.0.1"
embedded-nal-async = "0.7.1"
extension-traits = "1.0.1"
enumflags2 = "0.7.9"
embedded-graphics = "0.8"
# hub75 = { git = "https://github.com/david-sawatzke/hub75-rs", rev = "ba1eaa6", features = [
#   "size-64x64",
# ] }
# hub75 = { git = "https://github.com/Niedzwiedzw/hub75-rs", rev = "30f2aa6", features = [
#   "size-64x64",
# ] }
hub75 = { path = "/home/niedzwiedz/Programming/hub75-rs", features = [
  "size-64x64",
] }
embedded-hal = "0.2"

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
display-interface-spi = "0.4.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }


[workspace.package]
version = "0.1.0"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


# PACKAGE
[package]
name = "esp-reaper-status-bar-rs"
version = "0.1.0"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
smoltcp.workspace = true
embedded-svc.workspace = true
embedded-io.workspace = true
snafu.workspace = true
# static_cell.workspace = true
reqwless.workspace = true
tap.workspace = true
embedded-nal-async.workspace = true
extension-traits.workspace = true
enumflags2.workspace = true
embedded-hal.workspace = true
embedded-wrap-err.workspace = true
renderer.workspace = true
reaper.workspace = true

embassy-executor = { workspace = true }
embassy-embedded-hal.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-rp.workspace = true
embassy-usb.workspace = true
embassy-net.workspace = true
embassy-net-wiznet.workspace = true
embassy-futures.workspace = true
embassy-usb-logger.workspace = true
cyw43.workspace = true
cyw43-pio.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true
fixed.workspace = true
fixed-macro.workspace = true

#cortex-m.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-probe.workspace = true
futures.workspace = true
display-interface-spi.workspace = true
embedded-graphics.workspace = true
st7789.workspace = true
display-interface.workspace = true
byte-slice-cast.workspace = true
smart-leds.workspace = true
heapless.workspace = true
usbd-hid.workspace = true

embedded-hal-1.workspace = true
embedded-hal-async.workspace = true
embedded-hal-bus.workspace = true
embedded-io-async.workspace = true
embedded-storage.workspace = true
static_cell.workspace = true
portable-atomic.workspace = true
log.workspace = true
pio-proc.workspace = true
pio.workspace = true
rand.workspace = true
hub75.workspace = true
# rp-pico = "0.8.0"


[features]
default = []
release-mode = []

[profile.dev]
codegen-units = 1
opt-level = 3

[profile.release]
debug = true
codegen-units = 1
opt-level = 3
