[package]
name = "embedded-wrap-err"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]
extension-traits.workspace = true
log.workspace = true
