[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics.workspace = true
embedded-hal = "1.0.0"
embedded-wrap-err.workspace = true
enumflags2.workspace = true
extension-traits.workspace = true
reaper.workspace = true
tap.workspace = true
