[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
std = []

[dependencies]
embedded-graphics.workspace = true
embedded-hal.workspace = true
embedded-wrap-err.workspace = true
enumflags2.workspace = true
extension-traits.workspace = true
reaper.workspace = true
tap.workspace = true

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
